update AutoAnchor.java - damage calculations (beta)